@@ -4,6 +4,7 @@ v4.10 ???
     significantly smaller modules.
   - Added the -k command line option and /KeywordArgs/ and /NoKeywordArgs/
     function annotations to support keyword arguments.
+  - Added the /Default/ exception annotation.
   - Added support for configuring and building outside of the source tree.
 
 v4.9.1 23rd October 2009
